--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "webpack-dev-middleware": "^1.6.1"
   },
   "devDependencies": {
+    "css-loader": "^0.23.1",
+    "csslint": "^0.10.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "style-loader": "^0.13.1",
     "webpack-hot-middleware": "^2.12.0"
   }
 }
