--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "main": "index.js",
   "scripts": {
     "compile": "webpack",
-    "start": "node server.js",
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Bobby Bryant",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.14.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
+  },
+  "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "express": "^4.14.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1"
-  },
-  "devDependencies": {
     "css-loader": "^0.23.1",
     "csslint": "^0.10.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "style-loader": "^0.13.1",
-    "webpack-hot-middleware": "^2.12.0"
+    "webpack-hot-middleware": "^2.12.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1"
   }
 }
